[package]
name = "clankers-engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Host-facing reusable agent engine contracts for clankers"

[dependencies]
clanker-message = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }

[lints]
workspace = true
