[package]
name = "clankers-hooks"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Hook system — lifecycle, git, and plugin hooks with shared dispatch pipeline"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"

[lints]
workspace = true
