[package]
name = "clankers-matrix"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Matrix protocol bridge for clankers — enables communication between clankers instances over Matrix rooms"
keywords = ["matrix", "chat", "bridge", "agent"]
categories = ["network-programming"]

[dependencies]
matrix-sdk = { version = "0.9", default-features = false, features = ["e2e-encryption", "sqlite", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
url = "2"
dirs = "6"
uuid = { version = "1", features = ["v4"] }
hostname = "0.4"
mime = "0.3"
ruma = "0.12"
pulldown-cmark = "0.12"

[lints]
workspace = true
