[package]
name = "clankers-matrix"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Matrix protocol bridge for clankers — enables communication between clankers instances over Matrix rooms"
keywords = ["matrix", "chat", "bridge", "agent"]
categories = ["network-programming"]

[dependencies]
matrix-sdk = { version = "0.9", default-features = false, features = ["e2e-encryption", "sqlite", "rustls-tls"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
url = "2"
dirs = "6"
uuid = { workspace = true }
hostname = "0.4"
mime = "0.3"
ruma = "0.12"
pulldown-cmark = "0.12"

[lints]
workspace = true
