[package]
name = "clankers-merge"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Order-independent merge engine based on pijul's patch algebra (graggles + categorical pushout)"
keywords = ["merge", "crdt", "patch", "concurrent"]
categories = ["algorithms", "data-structures"]

[dependencies]
serde = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.0"

[lints]
workspace = true
