[package]
name = "clankers-message"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Message types for LLM agent conversations"

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
hex = "0.4"
clankers-router = { version = "0.1.0", path = "../clankers-router" }

[dev-dependencies]
pretty_assertions = "1.0"

[lints]
workspace = true
