[package]
name = "clankers-model-selection"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Multi-model routing policy, cost tracking, and orchestration"

[dependencies]
clankers-router = { version = "0.1.0", path = "../clankers-router" }
clankers-tui-types = { version = "0.1.0", path = "../clankers-tui-types" }
tracing = "0.1"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-util = { version = "0.7", features = ["codec"] }
