[package]
name = "clankers-model-selection"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Multi-model routing policy, cost tracking, and orchestration"

[dependencies]
clanker-router = { git = "https://github.com/brittonr/clanker-router" }
clankers-tui-types = { version = "0.1.0", path = "../clankers-tui-types" }
tracing = { workspace = true }
parking_lot = "0.12"
serde = { workspace = true }
serde_json = { workspace = true }
tokio-util = { version = "0.7", features = ["codec"] }
