[package]
name = "clankers-model-selection"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Multi-model routing policy, cost tracking, and orchestration"

[dependencies]
clanker-router = { workspace = true }
clanker-tui-types = { workspace = true }
tracing = { workspace = true }
parking_lot = "0.12"
serde = { workspace = true }
serde_json = { workspace = true }
tokio-util = { version = "0.7", features = ["codec"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(dylint_lib, values("tigerstyle"))'] }
