[package]
name = "clankers-nix"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Nix integration via snix crates — typed store paths, derivation reading, flake ref validation"

[features]
default = []
# Phase 2: in-process Nix evaluation
eval = ["dep:snix-eval", "dep:snix-serde"]
# Phase 3: store reference scanning with Wu-Manber acceleration
refscan = ["dep:snix-castore"]

[dependencies]
nix-compat = { git = "https://git.snix.dev/snix/snix.git", rev = "8fe3bade2013befd5ca98aa42224fa2a23551559", default-features = false, features = ["flakeref"] }
snafu = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
regex = "1"
bstr = "1"

# Phase 2 (optional)
snix-eval = { git = "https://git.snix.dev/snix/snix.git", rev = "8fe3bade2013befd5ca98aa42224fa2a23551559", optional = true }
snix-serde = { git = "https://git.snix.dev/snix/snix.git", rev = "8fe3bade2013befd5ca98aa42224fa2a23551559", optional = true }

# Phase 3 (optional)
snix-castore = { git = "https://git.snix.dev/snix/snix.git", rev = "8fe3bade2013befd5ca98aa42224fa2a23551559", optional = true, default-features = false }

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"

[lints]
workspace = true
