[package]
name = "clankers-plugin-sdk"
version = "0.1.0"
edition = "2021"
description = "SDK for building clankers WASM plugins — provides protocol types, tool/event dispatch, and arg helpers"
license = "AGPL-3.0-or-later"
keywords = ["wasm", "plugin", "extism", "sdk"]
categories = ["wasm", "development-tools"]

[lib]
crate-type = ["rlib"]

[dependencies]
extism-pdk = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Opt out of the parent workspace — this crate targets wasm32-unknown-unknown
[workspace]
