[package]
name = "clankers-procmon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Process monitoring — tracks child processes, CPU, and memory usage"

[dependencies]
clanker-tui-types = { workspace = true }
parking_lot = "0.12"
serde = { workspace = true }
sysinfo = "0.34"
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["codec"] }

[lints]
workspace = true
