[package]
name = "clankers-protocol"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Wire protocol types for daemon-client communication"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
