[package]
name = "clankers-provider"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "LLM provider abstraction layer for clankers"

[dependencies]
clankers-message = { version = "0.1.0", path = "../clankers-message" }
clanker-router = { workspace = true, features = ["rpc"] }
clankers-tui-types = { version = "0.1.0", path = "../clankers-tui-types" }
async-trait = "0.1"
futures = "0.3"
base64 = "0.22"
chrono = { workspace = true }
fs4 = { version = "0.13", features = ["tokio"] }
rand = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
sha2 = "0.10"
url = { version = "2", features = ["serde"] }
reqwest-eventsource = "0.6"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
