[package]
name = "clankers-router"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Model router and auth gateway for LLM providers"
keywords = ["llm", "router", "auth", "openai", "anthropic"]
categories = ["authentication", "web-programming"]

[[bin]]
name = "clankers-router"
path = "src/bin/clankers_router/main.rs"
required-features = ["cli"]

[features]
default = []
proxy = ["dep:axum", "dep:tower-http"]
rpc = ["dep:iroh", "dep:libc"]
cli = ["dep:clap", "dep:ratatui", "dep:crossterm", "dep:tracing-subscriber", "dep:open", "rpc", "proxy"]

[dependencies]
async-trait = "0.1"
base64 = "0.22"
chrono = { workspace = true }
futures-buffered = "0.2"
futures-lite = "2.6"
fs4 = { version = "0.13", features = ["tokio"] }
hex = "0.4"
rand = { workspace = true }
redb = "2.6"
reqwest = { workspace = true }
reqwest-eventsource = "0.6"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1.18"
tokio-util = { version = "0.7.18", features = ["io"] }
tracing = { workspace = true }
url = "2"
urlencoding = "2.1"
uuid = { workspace = true }

# Proxy server dependencies (optional)
axum = { version = "0.8", features = ["json"], optional = true }
tower-http = { version = "0.6", features = ["cors", "trace"], optional = true }

# CLI/TUI dependencies (optional)
clap = { version = "4", features = ["derive", "env"], optional = true }
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.29", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
dirs = "6"
iroh = { version = "0.96", features = ["address-lookup-mdns"], optional = true }
libc = { version = "0.2", optional = true }
open = { version = "5", optional = true }

[dev-dependencies]
pretty_assertions = "1.0"
tempfile = "3"
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }

[lints]
workspace = true
