[package]
name = "clankers-router"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Re-exports clanker-router (extracted crate)"

[features]
default = []
proxy = ["clanker-router/proxy"]
rpc = ["clanker-router/rpc"]
cli = ["clanker-router/cli"]

[dependencies]
clanker-router = { git = "https://github.com/brittonr/clanker-router", features = ["rpc"] }

[lints]
workspace = true
